build.log
   Compiling rustview v0.1.0 (C:\_new_ai_project\uriviewer)
warning: unused imports: `current_index` and `images_in_folder`
 --> src\app.rs:7:18
  |
7 | use crate::nav::{current_index, images_in_folder, is_image};
  |                  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Cursor`
 --> src\loader.rs:5:26
  |
5 | use std::io::{BufReader, Cursor, Read};
  |                          ^^^^^^

warning: unused imports: `CMF_DEFAULTONLY` and `CMF_VERBSONLY`
  --> src\shell_ext.rs:19:5
   |
19 |     CMF_DEFAULTONLY, CMF_VERBSONLY, CMINVOKECOMMANDINFO, HDROP,
   |     ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src\app.rs:699:17
    |
699 |         stroke: egui::Stroke::new(thickness, Color32::from_rgb(108, 143, 255)),
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `PathStroke`, found `Stroke`
    |
help: call `Into::into` on this expression to convert `egui::Stroke` into `PathStroke`
    |
699 |         stroke: egui::Stroke::new(thickness, Color32::from_rgb(108, 143, 255)).into(),
    |                                                                               +++++++

error[E0308]: mismatched types
   --> src\app.rs:710:17
    |
710 |         stroke: egui::Stroke::new(thickness, Color32::WHITE),
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `PathStroke`, found `Stroke`
    |
help: call `Into::into` on this expression to convert `egui::Stroke` into `PathStroke`
    |
710 |         stroke: egui::Stroke::new(thickness, Color32::WHITE).into(),
    |                                                             +++++++

warning: value assigned to `menu_index` is never read
   --> src\shell_ext.rs:220:21
    |
220 |                     menu_index += 1;
    |                     ^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0308`.
warning: `rustview` (lib) generated 4 warnings
error: could not compile `rustview` (lib) due to 2 previous errors; 4 warnings emitted
